Ajuste no botao de enviar e no form, colocar branco.

--- a/conceito/index.html
+++ b/conceito/index.html
@@ -70,7 +70,7 @@ Peça seu orçamento através do nosso contato.</h5>
 <form class="send" action="">
   <div class="form-input">
     <input type="text" name="" placeholder="Digite seu e-mail">
-    <input type="image" src="libs/img/bt-enviar.png">
+    <input type="image" src="libs/img/transp.png">
   </div>
 </form>
               </div>
@@ -81,7 +81,7 @@ Peça seu orçamento através do nosso contato.</h5>
 
                     <ul class="lista-informacoes">
                       <li class="iinst"><a hrfe="https://www.instagram.com/conceito.assessoria">conceito.assessoria</a></li>
-                      <li class="itel">Telefone: (84) 3213-2096 (Fixo e whatsapp)</li>
+                      <li class="itel">Telefone: <a href="https://api.whatsapp.com/send?phone=558432132096&text=Ol%C3%A1!" target="_blank">(84) 3213-2096</a> (Fixo e whatsapp)</li>
                       <li class="iweb">contato@conceitoassessoria.com.br</li>
                       <li><strong>Entre em contato conosco e seja nosso cliente.</strong></li>
                     </ul>
